# corporate-meeting-minutes

./: .gitignore  README.md  corporate_meeting_minutes.py  pyproject.toml
Senior counsel prompt/: senior_counsel_audit_prompt.md
audit_reports/: all_corp_accomplishments_2021-2025.json  remediation_plan.md  senior_counsel_audit_2022_2026.md  senior_counsel_audit_2024_2026.md
audit_text/: generated__books__all_companies_all_meetings_book.docx.txt  generated__books__data_record_science_all_meetings_book.docx.txt  generated__books__hippo_all_meetings_book.docx.txt  generated__books__loki_sports_enterprises_all_meetings_book.docx.txt  generated__books__ritual_growth_all_meetings_book.docx.txt  generated__books__surveyteams_all_meetings_book.docx.txt  generated__books__teamboost_ai_all_meetings_book.docx.txt  generated__data_record_science__data_record_science_2022_agm.docx.txt  generated__data_record_science__data_record_science_2022_annual_meeting_of_stockholders.docx.txt  generated__data_record_science__data_record_science_2022_majority_stockholders_written_consent_ratification_of_annual_board_actions.docx.txt  generated__data_record_science__data_record_science_2022_notice_of_annual_stockholder_meeting.docx.txt  generated__data_record_science__data_record_science_2022_quarterly_2022_Q1.docx.txt  generated__data_record_science__data_record_science_2022_quarterly_2022_Q2.docx.txt  generated__data_record_science__data_record_science_2022_quarterly_2022_Q3.docx.txt  generated__data_record_science__data_record_science_2022_quarterly_2022_Q4.docx.txt  (+233 more)
(+131 files in other folders)
